Revision history for Perl extension PPM::Repositories

0.14  unreleased
    - add wxperl and wxansi repositories

0.13  Fri Apr 18 2008
    - devhelp repository has been cleaned up and only contains
      Imager module for 5.8 now.
    - Add devhelp repo to %REPO hash for new API too
    - Add '=head1 NAME' line to properly define the module abstract

0.12  Tue Apr 15 2008
    - removed smueller repository [http://rt.cpan.org/Ticket/Display.html?id=23979]
    - removed datetime repository [http://rt.cpan.org/Ticket/Display.html?id=17391]
    - removed dead repositories: soulcage, esoft, savage, spurkis, crazy, dada, rto
    - removed already commented out repositories: xray, perlxml
    - turned jenda's repository to inactive
    - added tcool and trouchelle repositories
    - addded new gtk2 repo; renamed outdated "official" one to gtk2-old
    - added get(), list() and used_archs() function
    - updated documentation
    - added some simple tests to test.pl
    - added sample scripts in eg/ subdirectory

0.11  Thu May 12 04:46:47 2005
    - removed some repositories that are gone for good
      ( http://rt.cpan.org/NoAuth/Bug.html?id=12761 )

0.10  Thu May 20 15:30:59 2004
    - updated synopsis

0.09  Sat Mar 13 19:08:08 2004
    - some PerlO values were wrong (no biggie)

0.08  Sat Mar 13 17:46:29 2004
    - added smueller, bribes and soulcage/soulcage58 ("bugs" 5367, 5644, 5477 on rt)

0.07  Wed Nov  5 20:02:09 2003
    - I realized the 0.05 Changes never happened (D'oh)
    - really added pod pointing to guide(s) on setting up a repository

0.06  Wed Nov  5 19:46:05 2003
    - added esoft
    - added log4perl "repository"
    - updated pod

0.05 
    - added jmcnamara repository (he finally made it a repository)
    - added pod pointing to guide(s) on setting up a repository

0.04  Mon Jun  2 17:28:31 2003
    - marked savage repository active (he finally fixed it)

0.03  Fri May 30 14:43:28 2003